fixed the spacing bug with the removeImgUpload

--- a/src/app/components/scribes.css
+++ b/src/app/components/scribes.css
@@ -117,11 +117,21 @@ li.card:last-of-type {
 }
 
 .imagePreview-Wrapper {
-  background-color: whitesmoke;
+	position: relative;
+  background-color: white;
   border-top-left-radius: 5px;
   border-top-right-radius: 5px;
-  padding: 0.5vh;
-  position: relative;
+	border: 1px solid #dbdbdb;
+	border-bottom: none;
+  padding: 0.5vh 0.5vw;
+	box-shadow: inset 0 1px 2px rgba(10, 10, 10, 0.1);
+}
+
+.topright {
+    position: absolute;
+    top: .5vh;
+    left: 8.5vw;
+		z-index: 2;
 }
 
 .input-file {
